--- a/blog_framework.html
+++ b/blog_framework.html
@@ -580,7 +580,7 @@
 
       <!-- 右侧功能区 -->
       <div class="flex items-center space-x-4">
-          <a href="#" class="nav-link active">Sprival</a>
+          <a href="/sprdoc/index.html" class="nav-link active">Sprival</a>
       </div>
     </div>
   </header>
