--- a/sprival_framework.html
+++ b/sprival_framework.html
@@ -579,7 +579,7 @@
 
       <!-- 右侧功能区 -->
       <div class="flex items-center space-x-4">
-          <a href="#" class="nav-link active">Blog</a>
+          <a href="/sprdoc/blog_index.html" class="nav-link active">Blog</a>
       </div>
     </div>
   </header>
