--- a/blog_index.html
+++ b/blog_index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>文章导航布局（固定显示版）</title>
+    <title>Blog</title>
 
     <style>
         /* 基础样式与变量定义 */
