--- a/sprival_framework.html
+++ b/sprival_framework.html
@@ -801,6 +801,7 @@
         <!-- 右侧功能区 -->
         <div class="flex items-center space-x-4">
             <a href="/sprdoc/blog_index.html" class="nav-link active">Blog</a>
+            <a href="https://github.com/soyokra/sprival" class="nav-link active">Github</a>
         </div>
     </div>
 </header>
@@ -813,8 +814,34 @@
             <a href="/sprdoc/view/sprival/README.html" class="chapter-link">
                 <span>快速开始</span>
             </a>
+            <a href="/sprdoc/view/sprival/spring-http-server/README.html" class="chapter-link">
+                <span>HTTP 服务端</span>
+            </a>
+            <a href="/sprdoc/view/sprival/spring-http-client/README.html" class="chapter-link">
+                <span>HTTP 客户端</span>
+            </a>
             <a href="/sprdoc/view/sprival/spring-mysql/README.html" class="chapter-link">
                 <span>数据库</span>
+            </a>
+
+            <a href="/sprdoc/view/sprival/spring-rabbit/README.html" class="chapter-link">
+                <span>RabbitMQ</span>
+            </a>
+
+            <a href="/sprdoc/view/sprival/spring-kafka/README.html" class="chapter-link">
+                <span>Kafka</span>
+            </a>
+
+            <a href="/sprdoc/view/sprival/spring-mongo/README.html" class="chapter-link">
+                <span>MongoDB</span>
+            </a>
+
+            <a href="/sprdoc/view/sprival/spring-ealsticsearch/README.html" class="chapter-link">
+                <span>Elasticsearch</span>
+            </a>
+
+            <a href="/sprdoc/view/sprival/spring-clickhouse/README.html" class="chapter-link">
+                <span>Clickhouse</span>
             </a>
         </nav>
     </div>
